Append dots in the info widget for very long task names. Don't show confirmation dialog in case of blank string.